--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,7 @@ open = "1.4.0"
 unicode-width = "0.1.8"
 term_size = "0.3.2"
 quick-xml = "0.18.1"
+notify-rust = { version = "4.0.0", optional = true }
 
 # Optional/http:
 attohttpc = { version = "0.15.0", optional = true, default-features = false, features = ["tls", "form"] }
