--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,8 @@ clap = "2.33.0"
 ansi_term = "0.12.1"
 dirs = "2.0.2"
 git2 = { version = "0.13.3", default-features = false, features = [] }
-toml = { version = "0.5.6", features = ["preserve_order"] }
+toml = "0.5.6"
+serde = { version = "^1.0", features = ["derive"] }
 serde_json = "1.0.51"
 rayon = "1.3.0"
 pretty_env_logger = "0.4.0"
