--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ ansi_term = "0.12.1"
 dirs = "2.0.2"
 git2 = { version = "0.13.3", default-features = false, features = [] }
 toml = "0.5.6"
-serde = { version = "^1.0", features = ["derive"] }
+lazy_static = "1.0"
 serde_json = "1.0.51"
 rayon = "1.3.0"
 pretty_env_logger = "0.4.0"
