ci: download all artifacts at once

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -269,27 +269,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      # These can be squashed when https://github.com/actions/download-artifact/issues/6 is closed
-      - name: Download releases from github_build
-        uses: actions/download-artifact@v1
-        with:
-          name: starship-x86_64-unknown-linux-gnu.tar.gz
-          path: .
-      - name: Download releases from github_build
-        uses: actions/download-artifact@v1
-        with:
-          name: starship-x86_64-unknown-linux-musl.tar.gz
-          path: .
-      - name: Download releases from github_build
-        uses: actions/download-artifact@v1
-        with:
-          name: starship-x86_64-apple-darwin.tar.gz
-          path: .
-      - name: Download releases from github_build
-        uses: actions/download-artifact@v1
-        with:
-          name: starship-x86_64-pc-windows-msvc.zip
-          path: .
+      - name: Download build artifacts
+        uses: actions/download-artifact@v2
 
       - name: Generate checksums
         run: for file in starship-*; do openssl dgst -sha256 -r "$file" | awk '{print $1}' > "${file}.sha256"; done
