--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -9,13 +9,13 @@ exemptLabels:
 staleLabel: wontfix
 # Comment to post when marking an issue as stale. Set to `false` to disable
 markComment: >
-  As we are undergoing refactoring of Starship, we have started marking issues as stale
-  in order to prepare for the new architecture changes. 
+  As we are undergoing refactoring of Starship, we have started marking old issues as stale
+  in order to prepare for the new architecture changes. This acts as a reminder to the
+  maintainers to follow up on the issues.
   
   This issue has been automatically marked as stale to because it has not had
-  recent activity. This acts as a reminder to the maintainers to address it. 
-  Due to the refactor, it may be closed if no further activity occurs with the option
-  of being reopened at any time. Thank you for your contributions!
+  recent activity. Due to the refactor, it may be closed if no further activity occurs 
+  with the option of being reopened at any time. Thank you for your contributions!
   
 # Comment to post when closing a stale issue. Set to `false` to disable
 closeComment: >
