--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,7 +69,7 @@ native-tls = { version = "0.2", optional = true }
 winapi = { version = "0.3", features = ["winuser", "securitybaseapi", "processthreadsapi", "handleapi", "impl-default"]}
 
 [target.'cfg(not(windows))'.dependencies]
-libc = "0.2"
+nix = "0.17.0"
 
 [dev-dependencies]
 tempfile = "3.1.0"
