--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ tls-vendored = ["native-tls/vendored"]
 [dependencies]
 clap = "2.33.1"
 ansi_term = "0.12.1"
-dirs = "2.0.2"
+dirs-next = "1.0.1"
 git2 = { version = "0.13.6", default-features = false, features = [] }
 toml = { version = "0.5.6", features = ["preserve_order"] }
 serde_json = "1.0.55"
