chore: bump Homebrew formula on new release

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -175,21 +175,11 @@ jobs:
     name: Update Brew Formula
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v2
-      - run: |
-          echo "https://matchai:$HOMEBREW_GITHUB_API_TOKEN@github.com" > ~/.git-credentials
-          git config --global credential.helper store
-          git config --global user.name "Matan Kushner"
-          git config --global user.email "hello@matchai.dev"
-
-          cd $(brew --repo homebrew/core)
-          git fetch origin
-          sudo git reset --hard origin/master
-          cd -
-
-          brew bump-formula-pr --url=https://github.com/starship/starship/archive/$(git describe --tags).tar.gz --message="Automated release pull request using continuous integration." --no-browse -v starship --force
+      - uses: mislav/bump-homebrew-formula-action@v1
+        with:
+          formula-name: starship
         env:
-          HOMEBREW_GITHUB_API_TOKEN: ${{ secrets.HOMEBREW_GITHUB_API_TOKEN }}
+          COMMITTER_TOKEN: ${{ secrets.HOMEBREW_GITHUB_API_TOKEN }}
 
   # Build sources for every OS
   github_build:
