--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,8 @@ jobs:
         with:
           rust-version: stable
 
-      # - name: Build | Publish
-      #   run: cargo publish --token ${{ secrets.CRATES_IO_TOKEN }}
+      - name: Build | Publish
+        run: cargo publish --dry-run #--token ${{ secrets.CRATES_IO_TOKEN }}
 
   # update_brew_formula:
   #   name: Update Brew Formula
@@ -79,21 +79,15 @@ jobs:
 
       - name: Setup | musl tools
         if: matrix.target == 'x86_64-unknown-linux-musl'
-        run: sudo apt-get install -y musl-tools
+        run: sudo apt install -y musl-tools
 
       - name: Build | Build
         if: matrix.target != 'x86_64-unknown-linux-musl'
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --release --target ${{ matrix.target }}
+        run: cargo build --release --target ${{ matrix.target }}
 
       - name: Build | Build (musl)
         if: matrix.target == 'x86_64-unknown-linux-musl'
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --release --features tls-vendored --target ${{ matrix.target }}
+        run: cargo build --release --features tls-vendored --target ${{ matrix.target }}
 
       - name: Post Setup | Prepare artifacts [Windows]
         if: matrix.os == 'windows-latest'
