ci: Independent caches for stable and nightly rust

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -102,7 +102,7 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
             target
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          key: ${{ runner.os }}-${{ matrix.rust }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       # Install all the required dependencies for testing
       - name: Setup | Rust
