--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,6 +65,12 @@ quick-xml = "0.18.1"
 attohttpc = { version = "0.15.0", optional = true, default-features = false, features = ["tls", "form"] }
 native-tls = { version = "0.2", optional = true }
 
+[target.'cfg(windows)'.dependencies]
+winapi = { version = "0.3", features = ["winuser", "securitybaseapi", "processthreadsapi", "handleapi", "impl-default"]}
+
+[target.'cfg(not(windows))'.dependencies]
+nix = "0.17.0"
+
 [dev-dependencies]
 tempfile = "3.1.0"
 
