--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ tls-vendored = ["native-tls/vendored"]
 clap = "2.33.1"
 ansi_term = "0.12.1"
 dirs-next = "1.0.1"
-git2 = { version = "0.13.6", default-features = false, features = [] }
+git2 = { version = "0.13.6", default-features = false }
 toml = { version = "0.5.6", features = ["preserve_order"] }
 serde_json = "1.0.56"
 rayon = "1.3.1"
@@ -67,10 +67,6 @@ native-tls = { version = "0.2", optional = true }
 
 [dev-dependencies]
 tempfile = "3.1.0"
-# More realiable than std::fs version on Windows
-# For removing temporary directories manually when needed
-# This is what tempfile uses to delete temporary directories
-remove_dir_all = "0.5.3"
 
 [profile.release]
 codegen-units = 1
