--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -152,13 +152,13 @@ jobs:
         uses: guumaster/aur-publish-docker-action@v1
         with:
           package_name: starship
-          commit_username: "TO_BE_DETERMENT"
-          commit_email: TO_BE_DETERMENT@example.com
+          commit_username: "Starship Bot"
+          commit_email: starship.bot.noreply@gmail.com
           ssh_private_key: ${{ secrets.AUR_SSH_PRIVATE_KEY }}
       - name: Build | Publish AUR package (-bin version)
         uses: guumaster/aur-publish-docker-action@v1
         with:
           package_name: starship-bin
-          commit_username: "TO_BE_DETERMENT"
-          commit_email: TO_BE_DETERMENT@example.com
+          commit_username: "Starship Bot"
+          commit_email: starship.bot.noreply@gmail.com
           ssh_private_key: ${{ secrets.AUR_SSH_PRIVATE_KEY }}
