--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,10 @@ Cargo.lock
 # Vim swap files
 *.swp
 
+# Emacs
+*~
+\#*\#
+
 # Compiled files for documentation
 docs/node_modules
 docs/.vuepress/dist/
