ci: Auto publish for the AUR (#1360)
* ci: Auto publish for the AUR

* Add commit username + email to deploy.yml

* ci: Use ATiltedTree/create-aur-release

After testing with the other action it turns out that they forgot the `-s` `makepkg` flag meaning download all required dependencies.
I forked it fixed the issue and added a fix from some other fork that allows for multiple source files.

Co-authored-by: Kevin Song <chipbuster@gmail.com>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -147,3 +147,22 @@ jobs:
           body_path: RELEASE.md
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  aur_release:
+    runs-on: ubuntu-latest
+    name: Create AUR release
+    needs: github_release # The -bin version downloads and shasums it
+    steps:
+      - name: Build | Publish AUR package
+        uses: ATiltedTree/create-aur-release@v1
+        with:
+          package_name: starship
+          commit_username: "Starship Bot"
+          commit_email: starship.bot.noreply@gmail.com
+          ssh_private_key: ${{ secrets.AUR_SSH_PRIVATE_KEY }}
+      - name: Build | Publish AUR package (-bin version)
+        uses: ATiltedTree/create-aur-release@v1
+        with:
+          package_name: starship-bin
+          commit_username: "Starship Bot"
+          commit_email: starship.bot.noreply@gmail.com
+          ssh_private_key: ${{ secrets.AUR_SSH_PRIVATE_KEY }}
