ci: Retry failed CI jobs
To try to get around our flaky CI tests have added a quick and dirty
retry.

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,3 +1,4 @@
+---
 name: Main workflow
 on:
   push:
@@ -134,4 +135,6 @@ jobs:
 
       # Run the ignored tests that expect the above setup
       - name: Build | Test
-        run: cargo test -- -Z unstable-options --include-ignored
+        run: |
+          cargo test -- -Z unstable-options --include-ignored \
+          || cargo test -- -Z unstable-options --include-ignored
