ci: Run clippy on all OSs
Have updated the CI config to run clippy on all OSs. This will catch any
issues in OS specific codes. This might increase the amount of
annotations that are created in any of the common code but it should be
better than the alternative.

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,3 +1,4 @@
+---
 name: Main workflow
 on:
   push:
@@ -32,7 +33,10 @@ jobs:
   # Run the `clippy` linting tool
   clippy:
     name: Clippy [Linter]
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macOS-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Setup | Checkout
         uses: actions/checkout@v2
