--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,7 +65,17 @@ attohttpc = { version = "0.15.0", optional = true, default-features = false, fea
 native-tls = { version = "0.2", optional = true }
 
 [target.'cfg(windows)'.dependencies]
-winapi = { version = "0.3", features = ["winuser", "securitybaseapi", "processthreadsapi", "handleapi", "impl-default"]}
+winapi = { version = "0.3", features = [
+  "winuser",
+  "securitybaseapi",
+  "processthreadsapi",
+  "handleapi",
+  "fileapi",
+  "errhandlingapi",
+  "winbase",
+  "winnt",
+  "impl-default",
+] }
 
 [target.'cfg(not(windows))'.dependencies]
 nix = "0.18.0"
