--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,8 +35,7 @@ git2 = { version = "0.13.8", default-features = false }
 toml = { version = "0.5.6", features = ["preserve_order"] }
 serde_json = "1.0.57"
 rayon = "1.3.1"
-pretty_env_logger = "0.4.0"
-log = "0.4.11"
+log = { version = "0.4.11", features = ["std"] }
 # battery is optional (on by default) because the crate doesn't currently build for Termux
 # see: https://github.com/svartalf/rust-battery/issues/33
 battery = { version = "0.7.5", optional = true }
