--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,7 @@ notify-rust = { version = "4.0.0", optional = true }
 # Optional/http:
 attohttpc = { version = "0.15.0", optional = true, default-features = false, features = ["tls", "form"] }
 native-tls = { version = "0.2", optional = true }
+shell-words = "1.0.0"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", features = [
