chore: Use starship for random session key

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,7 @@ open = "1.4.0"
 unicode-width = "0.1.8"
 term_size = "0.3.2"
 quick-xml = "0.18.1"
+rand = "0.7.3"
 notify-rust = { version = "4.0.0", optional = true }
 
 # Optional/http:
