--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ ansi_term = "0.12.1"
 dirs-next = "1.0.1"
 git2 = { version = "0.13.11", default-features = false }
 toml = { version = "0.5.6", features = ["preserve_order"] }
+rust-ini = "0.16" 
 serde_json = "1.0.58"
 rayon = "1.4.1"
 log = { version = "0.4.11", features = ["std"] }
