--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,6 +59,7 @@ unicode-width = "0.1.8"
 term_size = "0.3.2"
 quick-xml = "0.19.0"
 rand = "0.7.3"
+serde_derive = "1.0.115"
 notify-rust = { version = "4.0.0", optional = true }
 
 # Optional/http:
