--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,6 +60,7 @@ term_size = "0.3.2"
 quick-xml = "0.19.0"
 rand = "0.7.3"
 serde_derive = "1.0.115"
+indexmap = "1.6.0"
 notify-rust = { version = "4.0.0", optional = true }
 
 # Optional/http:
