--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -110,7 +110,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macOS-latest, windows-latest]
-        rust: [stable, nightly]
+        rust: [stable]
     steps:
       - name: Setup | Checkout
         uses: actions/checkout@v2
