ci: Run against nightly version of rust
Now that the uom dependency has been updated and compiles on the nightly
version of rust we can enable the builds again in the build matrix.

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -110,7 +110,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macOS-latest, windows-latest]
-        rust: [stable]
+        rust: [stable, nightly]
     steps:
       - name: Setup | Checkout
         uses: actions/checkout@v2
