--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,16 +30,16 @@ tls-vendored = ["native-tls/vendored"]
 [dependencies]
 clap = "2.33.3"
 ansi_term = "0.12.1"
-dirs-next = "2.0.0"
+dirs-next = "1.0.2"
 git2 = { version = "0.13.12", default-features = false }
 toml = { version = "0.5.7", features = ["preserve_order"] }
 rust-ini = "0.16" 
 serde_json = "1.0.59"
-rayon = "1.5.0"
+rayon = "1.4.1"
 log = { version = "0.4.11", features = ["std"] }
 # battery is optional (on by default) because the crate doesn't currently build for Termux
 # see: https://github.com/svartalf/rust-battery/issues/33
-battery = { version = "0.7.7", optional = true }
+battery = { version = "0.7.6", optional = true }
 path-slash = "0.1.3"
 unicode-segmentation = "1.6.0"
 gethostname = "0.2.1"
@@ -52,16 +52,17 @@ yaml-rust = "0.4"
 pest = "^2.1"
 pest_derive = "^2.1"
 regex = "1.4.1"
-os_info = "3.0.1"
+os_info = "3.0.0"
 urlencoding = "1.1.1"
 open = "1.4.0"
 unicode-width = "0.1.8"
 term_size = "0.3.2"
-quick-xml = "0.20.0"
+quick-xml = "0.19.0"
 rand = "0.7.3"
 serde_derive = "1.0.115"
 indexmap = "1.6.0"
 notify-rust = { version = "4.0.0", optional = true }
+semver = "0.11.0"
 
 # Optional/http:
 attohttpc = { version = "0.16.0", optional = true, default-features = false, features = ["tls", "form"] }
