--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ unicode-segmentation = "1.7.0"
 gethostname = "0.2.1"
 once_cell = "1.5.2"
 chrono = "0.4"
-sysinfo = "0.15.3"
+sys-info = "0.7.0"
 byte-unit = "4.0.9"
 starship_module_config_derive = { version = "0.1.2", path = "starship_module_config_derive" }
 yaml-rust = "0.4"
