--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,15 +82,15 @@ jobs:
           target: ${{ matrix.target }}
 
       - name: Setup | musl tools
-        if: contains( matrix.target, 'musl' )
+        if: endsWith( matrix.target, 'musl' )
         run: sudo apt install -y musl-tools
 
       - name: Build | Build
-        if: contains( matrix.target, 'musl' )
+        if: endsWith( matrix.target, 'musl' )
         run: cargo build --release --target ${{ matrix.target }}
 
       - name: Build | Build (musl)
-        if: contains( matrix.target, 'musl' )
+        if: endsWith( matrix.target, 'musl' )
         run: cargo build --release --features tls-vendored --target ${{ matrix.target }}
 
       - name: Post Setup | Prepare artifacts [Windows]
