--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,11 +57,12 @@ urlencoding = "1.1.1"
 open = "1.4.0"
 unicode-width = "0.1.8"
 term_size = "0.3.2"
-quick-xml = "0.20.0"
+quick-xml = "0.19.0"
 rand = "0.7.3"
 serde = { version = "1.0.117", features = ["derive"] }
 indexmap = "1.6.0"
 notify-rust = { version = "4.0.0", optional = true }
+semver = "0.11.0"
 
 # Optional/http:
 attohttpc = { version = "0.16.0", optional = true, default-features = false, features = ["tls", "form"] }
