--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,8 +49,8 @@ sys-info = "0.7.0"
 byte-unit = "4.0.9"
 starship_module_config_derive = { version = "0.1.2", path = "starship_module_config_derive" }
 yaml-rust = "0.4.4"
-pest = "^2.1"
-pest_derive = "^2.1"
+pest = "2.1.3"
+pest_derive = "2.1.0"
 regex = "1.4.2"
 os_info = "3.0.1"
 urlencoding = "1.1.1"
