--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,7 @@ serde = { version = "1.0.118", features = ["derive"] }
 indexmap = "1.6.1"
 notify-rust = { version = "4.0.0", optional = true }
 semver = "0.11.0"
+which = "4.0.2"
 
 # Optional/http:
 attohttpc = { version = "0.16.0", optional = true, default-features = false, features = ["tls", "form"] }
