--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 license = "ISC"
 keywords = ["prompt", "shell", "bash", "fish", "zsh"]
 categories = ["command-line-utilities"]
+build = "build.rs"
 description = """
 The minimal, blazing-fast, and infinitely customizable prompt for any shell! ☄🌌️
 """
@@ -64,6 +65,8 @@ indexmap = "1.6.1"
 notify-rust = { version = "4.0.0", optional = true }
 semver = "0.11.0"
 which = "4.0.2"
+shadow-rs = "0.5"
+
 
 # Optional/http:
 attohttpc = { version = "0.16.0", optional = true, default-features = false, features = ["tls", "form"] }
@@ -81,6 +84,9 @@ winapi = { version = "0.3.9", features = [
 
 [target.'cfg(not(windows))'.dependencies]
 nix = "0.19.1"
+
+[build-dependencies]
+shadow-rs = "0.5"
 
 [dev-dependencies]
 tempfile = "3.1.0"
