--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,27 +43,22 @@ jobs:
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
             name: starship-x86_64-unknown-linux-gnu.tar.gz
-            flags: "--features tls-vendored"
 
           - target: x86_64-unknown-linux-musl
             os: ubuntu-latest
             name: starship-x86_64-unknown-linux-musl.tar.gz
-            flags: "--features tls-vendored"
 
           - target: i686-unknown-linux-musl
             os: ubuntu-latest
             name: starship-i686-unknown-linux-musl.tar.gz
-            flags: "--features tls-vendored"
 
           - target: x86_64-apple-darwin
             os: macOS-latest
             name: starship-x86_64-apple-darwin.tar.gz
-            flags: ""
 
           - target: x86_64-pc-windows-msvc
             os: windows-latest
             name: starship-x86_64-pc-windows-msvc.zip
-            flags: ""
 
     runs-on: ${{ matrix.os }}
     steps:
@@ -91,8 +86,8 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --release ${{ matrix.flags }} --target ${{ matrix.target }}
-          use-cross: true
+          args: --release --features tls-vendored --target ${{ matrix.target }}
+          use-cross: contains(matrix.target, 'linux')
 
       - name: Post Build | Prepare artifacts [Windows]
         if: matrix.os == 'windows-latest'
